#350 refactor: TargetPriceNotification 추상화